Fixed margin issues on mobile in testimonial views

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -629,4 +629,8 @@ footer {
     .social-media h3 {
         font-size: 18px;
     }
+
+    .review-cont {
+        margin-top: 50px;
+    }
 }
